--- a/ejercicio.html
+++ b/ejercicio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hola mundo
+    hola mundos
     <button class="cool-button">Haz clic aquí</button>
 
 </body>
